# docs/swagger.yaml
@@ -4,6 +4,9 @@ definitions:
       age:
         description: 年龄
         type: integer
+      birthday:
+        description: '生日 格式: 2006-01-02'
+        type: string
       gender:
         description: 性别
         minimum: 1
@@ -17,6 +20,7 @@ definitions:
         type: string
     required:
     - age
+    - birthday
     - gender
     - is_on_job
     type: object
@@ -25,6 +29,9 @@ definitions:
       age:
         description: 年龄
         type: integer
+      birthday:
+        description: '生日 格式: 2006-01-02'
+        type: string
       gender:
         description: 性别
         minimum: 1
@@ -57,6 +64,9 @@ definitions:
       age:
         description: 年龄
         type: integer
+      birthday:
+        description: 生日
+        type: string
       created_at:
         description: 创建时间
         type: string
