# gen/model/user.go
@@ -1,9 +1,9 @@
 // Code generated by meta-egg. DO NOT EDIT.
 // WILL BE replace after re-generated!
 // DO NOT EDIT.
-// Version: v1.4.1-IE
+// Version: v1.9.1-CE
 // Author: meta-egg
-// Generated at: 2023-05-18 18:11
+// Generated at: 2023-09-12 19:32
 
 package model
 
@@ -19,6 +19,7 @@ const (
 	ColUserGender    = "gender"     // 性别
 	ColUserAge       = "age"        // 年龄
 	ColUserIsOnJob   = "is_on_job"  // 是否在职
+	ColUserBirthday  = "birthday"   // 生日
 	ColUserCreatedBy = "created_by" // 创建者
 	ColUserCreatedAt = "created_at" // 创建时间
 	ColUserUpdatedBy = "updated_by" // 更新者
@@ -34,6 +35,7 @@ type User struct {
 	Gender    uint64         `gorm:"column:gender"`     // 性别
 	Age       uint8          `gorm:"column:age"`        // 年龄
 	IsOnJob   bool           `gorm:"column:is_on_job"`  // 是否在职
+	Birthday  time.Time      `gorm:"column:birthday"`   // 生日
 	CreatedBy *uint64        `gorm:"column:created_by"` // 创建者 [default NULL]
 	CreatedAt time.Time      `gorm:"column:created_at"` // 创建时间
 	UpdatedBy *uint64        `gorm:"column:updated_by"` // 更新者 [default NULL]
