# internal/handler/http/user.go
@@ -1,19 +1,20 @@
 // Code generated by meta-egg. CAREFULLY EDIT.
 // WILL NOT BE replace after re-generated, unless you confirm it!
 // CAREFULLY EDIT.
-// Version: v1.5.8-EE
+// Version: v1.9.1-CE
 // Author: meta-egg
-// Generated at: 2023-05-30 00:32
+// Generated at: 2023-09-12 19:32
 
 package handler
 
 import (
 	"context"
-	"meta-egg-layout/gen/model"
 	"meta-egg-layout/internal/biz"
-	"meta-egg-layout/internal/biz/option"
+	"meta-egg-layout/internal/common/cerror"
 	"meta-egg-layout/internal/common/constraint"
 	"meta-egg-layout/internal/common/contexts"
+	"meta-egg-layout/internal/repo/option"
+	"time"
 
 	jgstr "github.com/Jinglever/go-string"
 	"github.com/gin-gonic/gin"
@@ -26,31 +27,34 @@ type UserDetail struct {
 	Gender    uint64  `json:"gender"`     // 性别
 	Age       uint8   `json:"age"`        // 年龄
 	IsOnJob   bool    `json:"is_on_job"`  // 是否在职
+	Birthday  string  `json:"birthday"`   // 生日
 	CreatedBy *uint64 `json:"created_by"` // 创建者 (nullable)
 	CreatedAt string  `json:"created_at"` // 创建时间
 	UpdatedBy *uint64 `json:"updated_by"` // 更新者 (nullable)
 	UpdatedAt string  `json:"updated_at"` // 更新时间
 }
 
-func (h *Handler) newUserDetailFromModel(ctx context.Context, mUser *model.User) (*UserDetail, error) {
+func (h *Handler) ToUserDetail(ctx context.Context, bo *biz.UserBO) (*UserDetail, error) {
 	return &UserDetail{
-		Id:        mUser.ID,
-		Name:      mUser.Name,
-		Gender:    mUser.Gender,
-		Age:       mUser.Age,
-		IsOnJob:   mUser.IsOnJob,
-		CreatedBy: mUser.CreatedBy,
-		CreatedAt: mUser.CreatedAt.Format(constraint.SecondTimeFormat),
-		UpdatedBy: mUser.UpdatedBy,
-		UpdatedAt: mUser.UpdatedAt.Format(constraint.SecondTimeFormat),
+		Id:        bo.ID,
+		Name:      bo.Name,
+		Gender:    bo.Gender,
+		Age:       bo.Age,
+		IsOnJob:   bo.IsOnJob,
+		Birthday:  bo.Birthday.Format(constraint.DateFormat),
+		CreatedBy: bo.CreatedBy,
+		CreatedAt: bo.CreatedAt.Format(constraint.SecondTimeFormat),
+		UpdatedBy: bo.UpdatedBy,
+		UpdatedAt: bo.UpdatedAt.Format(constraint.SecondTimeFormat),
 	}, nil
 }
 
 type ReqCreateUser struct {
-	Name    *string `json:"name" binding:"omitempty,max=64"` // 用户名
-	Gender  uint64  `json:"gender" binding:"required,gte=1"` // 性别
-	Age     uint8   `json:"age" binding:"required"`          // 年龄
-	IsOnJob bool    `json:"is_on_job" binding:"required"`    // 是否在职
+	Name     *string `json:"name" binding:"omitempty,max=64"`                 // 用户名
+	Gender   uint64  `json:"gender" binding:"required,gte=1"`                 // 性别
+	Age      uint8   `json:"age" binding:"required"`                          // 年龄
+	IsOnJob  bool    `json:"is_on_job" binding:"required"`                    // 是否在职
+	Birthday string  `json:"birthday" binding:"required,datetime=2006-01-02"` // 生日 格式: 2006-01-02
 }
 
 //	@Id			CreateUser
@@ -65,29 +69,38 @@ type ReqCreateUser struct {
 //	@Failure	400				{object}	RspBase
 //	@Router		/v1/users [post]
 func (h *Handler) CreateUser(c *gin.Context) {
-	log := contexts.GetLogger(c.Request.Context())
 	var req ReqCreateUser
 	err := shouldBind(c, &req)
 	if err != nil {
 		ResponseFail(c, err)
 		return
 	}
+	ctx := c.Request.Context()
+	log := contexts.GetLogger(ctx).
+		WithField("req", jgstr.JsonEncode(req))
 
-	mUser := &model.User{
-		Name:    req.Name,
-		Gender:  req.Gender,
-		Age:     req.Age,
-		IsOnJob: req.IsOnJob,
+	birthday, err := time.ParseInLocation(constraint.DateFormat, req.Birthday, time.Local)
+	if err != nil {
+		log.WithError(err).Errorf("fail to parse time: %s", req.Birthday)
+		ResponseFail(c, cerror.InvalidArgument("Birthday"))
+		return
 	}
-	err = h.BizService.CreateUser(c.Request.Context(), mUser)
+	userBO := &biz.UserBO{
+		Name:     req.Name,
+		Gender:   req.Gender,
+		Age:      req.Age,
+		IsOnJob:  req.IsOnJob,
+		Birthday: birthday,
+	}
+	err = h.BizService.CreateUser(ctx, userBO)
 	if err != nil {
 		log.WithError(err).Error("BizService.CreateUser failed")
 		ResponseFail(c, err)
 		return
 	}
-	d, err := h.newUserDetailFromModel(c.Request.Context(), mUser)
+	d, err := h.ToUserDetail(ctx, userBO)
 	if err != nil {
-		log.WithError(err).Error("newUserDetailFromModel failed")
+		log.WithError(err).Error("convert UserBO to UserDetail failed")
 		ResponseFail(c, err)
 		return
 	}
@@ -106,17 +119,18 @@ func (h *Handler) CreateUser(c *gin.Context) {
 //	@Failure	400				{object}	RspBase
 //	@Router		/v1/users/{id} [get]
 func (h *Handler) GetUserDetail(c *gin.Context) {
-	log := contexts.GetLogger(c.Request.Context())
 	id := jgstr.UintVal(c.Param("id"))
-	mUser, err := h.BizService.GetUserByID(c.Request.Context(), id)
+	ctx := c.Request.Context()
+	log := contexts.GetLogger(ctx).WithField("id", id)
+	userBO, err := h.BizService.GetUserByID(ctx, id)
 	if err != nil {
 		log.WithError(err).Error("BizService.GetUserByID failed")
 		ResponseFail(c, err)
 		return
 	}
-	d, err := h.newUserDetailFromModel(c.Request.Context(), mUser)
+	d, err := h.ToUserDetail(ctx, userBO)
 	if err != nil {
-		log.WithError(err).Error("newUserDetailFromModel failed")
+		log.WithError(err).Error("convert UserBO to UserDetail failed")
 		ResponseFail(c, err)
 		return
 	}
@@ -130,13 +144,13 @@ type UserListInfo struct {
 	Gender uint64  `json:"gender"` // 性别
 }
 
-func (h *Handler) newUserListInfoFromModels(ctx context.Context, msUser []*model.User) ([]*UserListInfo, error) {
-	list := make([]*UserListInfo, 0, len(msUser))
-	for i := range msUser {
+func (h *Handler) ToUserListInfo(ctx context.Context, objs []*biz.UserListBO) ([]*UserListInfo, error) {
+	list := make([]*UserListInfo, 0, len(objs))
+	for i := range objs {
 		list = append(list, &UserListInfo{
-			Id:     msUser[i].ID,
-			Name:   msUser[i].Name,
-			Gender: msUser[i].Gender,
+			Id:     objs[i].ID,
+			Name:   objs[i].Name,
+			Gender: objs[i].Gender,
 		})
 	}
 	return list, nil
@@ -155,8 +169,8 @@ type ReqGetUserList struct {
 	Gender  *uint64 `form:"gender" binding:"omitempty,gte=1"` // 性别
 	IsOnJob *bool   `form:"is_on_job" binding:"omitempty"`    // 是否在职
 	// 排序条件
-	OrderBy   *string           `form:"order_by" binding:"omitempty,oneof=id"`         // 排序字段,可选:id
-	OrderType *option.OrderType `form:"order_type" binding:"omitempty,oneof=asc desc"` // 排序类型,默认desc
+	OrderBy   *string `form:"order_by" binding:"omitempty,oneof=id"`         // 排序字段,可选:id
+	OrderType *string `form:"order_type" binding:"omitempty,oneof=asc desc"` // 排序类型,默认desc
 }
 
 //	@Id			GetUserList
@@ -176,41 +190,38 @@ type ReqGetUserList struct {
 //	@Failure	400				{object}	RspBase
 //	@Router		/v1/users [get]
 func (h *Handler) GetUserList(c *gin.Context) {
-	log := contexts.GetLogger(c.Request.Context())
 	var req ReqGetUserList
 	err := shouldBind(c, &req)
 	if err != nil {
 		ResponseFail(c, err)
 		return
 	}
+	ctx := c.Request.Context()
+	log := contexts.GetLogger(ctx).
+		WithField("req", jgstr.JsonEncode(req))
 	opt := &biz.UserListOption{
 		Pagination: &option.PaginationOption{
 			Page:     req.Page,
 			PageSize: req.PageSize,
 		},
-		Filter: &biz.UserFilterOption{
-			Gender:  req.Gender,
-			IsOnJob: req.IsOnJob,
-		},
 		Order: &option.OrderOption{
 			OrderBy:   req.OrderBy,
 			OrderType: req.OrderType,
 		},
-		Select: []interface{}{
-			model.ColUserID,
-			model.ColUserName,
-			model.ColUserGender,
+		Filter: &biz.UserFilterOption{
+			Gender:  req.Gender,
+			IsOnJob: req.IsOnJob,
 		},
 	}
-	msUser, total, err := h.BizService.GetUserList(c.Request.Context(), opt)
+	userBOs, total, err := h.BizService.GetUserList(ctx, opt)
 	if err != nil {
 		log.WithError(err).Error("BizService.GetUserList failed")
 		ResponseFail(c, err)
 		return
 	}
-	list, err := h.newUserListInfoFromModels(c.Request.Context(), msUser)
+	list, err := h.ToUserListInfo(ctx, userBOs)
 	if err != nil {
-		log.WithError(err).Error("newUserListInfoFromModels failed")
+		log.WithError(err).Error("convert UserListBO to UserListInfo failed")
 		ResponseFail(c, err)
 		return
 	}
@@ -221,10 +232,11 @@ func (h *Handler) GetUserList(c *gin.Context) {
 }
 
 type ReqUpdateUser struct {
-	Name    *string `json:"name" binding:"omitempty,max=64"`  // 用户名
-	Gender  *uint64 `json:"gender" binding:"omitempty,gte=1"` // 性别
-	Age     *uint8  `json:"age" binding:"omitempty"`          // 年龄
-	IsOnJob *bool   `json:"is_on_job" binding:"omitempty"`    // 是否在职
+	Name     *string `json:"name" binding:"omitempty,max=64"`                  // 用户名
+	Gender   *uint64 `json:"gender" binding:"omitempty,gte=1"`                 // 性别
+	Age      *uint8  `json:"age" binding:"omitempty"`                          // 年龄
+	IsOnJob  *bool   `json:"is_on_job" binding:"omitempty"`                    // 是否在职
+	Birthday *string `json:"birthday" binding:"omitempty,datetime=2006-01-02"` // 生日 格式: 2006-01-02
 }
 
 //	@Id			UpdateUser
@@ -240,7 +252,6 @@ type ReqUpdateUser struct {
 //	@Failure	400				{object}	RspBase
 //	@Router		/v1/users/{id} [put]
 func (h *Handler) UpdateUser(c *gin.Context) {
-	log := contexts.GetLogger(c.Request.Context())
 	id := jgstr.UintVal(c.Param("id"))
 	var req ReqUpdateUser
 	err := shouldBind(c, &req)
@@ -248,15 +259,27 @@ func (h *Handler) UpdateUser(c *gin.Context) {
 		ResponseFail(c, err)
 		return
 	}
-	opt := &biz.UserUpdateOption{
-		Set: &biz.UserSetOption{
-			Name:    req.Name,
-			Gender:  req.Gender,
-			Age:     req.Age,
-			IsOnJob: req.IsOnJob,
-		},
+	ctx := c.Request.Context()
+	log := contexts.GetLogger(ctx).
+		WithField("id", id).
+		WithField("req", jgstr.JsonEncode(req))
+	var birthday *time.Time
+	if req.Birthday != nil {
+		*birthday, err = time.ParseInLocation(constraint.DateFormat, *req.Birthday, time.Local)
+		if err != nil {
+			log.WithError(err).Errorf("fail to parse time: %s", *req.Birthday)
+			ResponseFail(c, cerror.InvalidArgument("Birthday"))
+			return
+		}
 	}
-	err = h.BizService.UpdateUserByID(c.Request.Context(), id, opt)
+	setOpt := &biz.UserSetOption{
+		Name:     req.Name,
+		Gender:   req.Gender,
+		Age:      req.Age,
+		IsOnJob:  req.IsOnJob,
+		Birthday: birthday,
+	}
+	err = h.BizService.UpdateUserByID(ctx, id, setOpt)
 	if err != nil {
 		log.WithError(err).Error("BizService.UpdateUserByID failed")
 		ResponseFail(c, err)
@@ -277,9 +300,10 @@ func (h *Handler) UpdateUser(c *gin.Context) {
 //	@Failure	400				{object}	RspBase
 //	@Router		/v1/users/{id} [delete]
 func (h *Handler) DeleteUser(c *gin.Context) {
-	log := contexts.GetLogger(c.Request.Context())
 	id := jgstr.UintVal(c.Param("id"))
-	err := h.BizService.DeleteUserByID(c.Request.Context(), id)
+	ctx := c.Request.Context()
+	log := contexts.GetLogger(ctx).WithField("id", id)
+	err := h.BizService.DeleteUserByID(ctx, id)
 	if err != nil {
 		log.WithError(err).Error("BizService.DeleteUserByID failed")
 		ResponseFail(c, err)
